# discord-buildathon-2023

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
docker/: Dockerfile  docker-compose.yml
src/: bot.py  main.py
src/cogs/: help.py  practice.py
src/config/: backup-dictionary.json  dictionary.json
src/dict/help/: en.json
src/dict/practice/: en.json
